v0.7.1/_sources/changelog.rst.txt
=========
Changelog
=========

.. .. _`sec:cl0x0`:
..
.. v0.x.0 / 2026-MM-DD (Unreleased)
.. ===================
..
.. :docs:`v0.x.0` for current. :docs:`v0.5.2` for QCSchema v1.
..
.. Breaking Changes
.. ----------------
..
.. New Features
.. ------------
..
.. Enhancements
.. ------------
..
.. Bug Fixes
.. ---------
..
.. Misc.
.. -----
..
.. MUST (Unmerged)
.. ---------------
..
.. WIP (Unmerged)
.. --------------


:docs:`dev` for latest.

.. _`sec:cl071`:

v0.7.1 / 2026-04-30
===================

:docs:`v0.7.1` for current. :docs:`v0.5.2` for QCSchema v1.

Enhancements
------------
* :pr:`48` Maint -- Warning printing silenced, so `import qcmanybody` is clean.
  Now depends on QCElemental >=0.50.0rc5

Bug Fixes
---------
* :pr:`48` EE -- Electrostatic embedding potential bug with Psi4 fixed embedding
  charges might appear in keywords even when no charges on molecule.


.. _`sec:cl070`:

v0.7.0 / 2026-03-27
===================

:docs:`v0.7.0` for current. :docs:`v0.5.2` for QCSchema v1.

Breaking Changes
----------------
* :pr:`47` Models -- All models now serialize to containing ``schema_name`` field.
  ``ManyBodyProperties`` also includes schema_name, but not all the Nones.

Enhancements
------------
* :pr:`47` Schema -- Compatibility with https://github.com/MolSSI/QCElemental/pull/393
  (QCElemental 0.50.0rc4) that replaces early QCElemental routines with native
  Pydantic serialization.
* :pr:`47` Models -- Add ``QCManyBody.models.v1.ManyBodyResultProperties.convert_v()``
  and ``QCManyBody.models.v2.ManyBodyProperties.convert_v()`` to interconvert.


.. _`sec:cl061`:

v0.6.1 / 2026-03-11
===================

:docs:`v0.6.1` for current. :docs:`v0.5.2` for QCSchema v1.

New Features
------------
* :pr:`46` Deps -- With QCSchema v2 and Optking > 0.5, QCManyBody can be used
  for MBE geometry optimizations.
* :pr:`46` Deps -- Requiring exactly QCElemental 0.50.0rc3 (previously >=0.50.0rc2)
  for caution with fast-moving development.

Misc.
-----
* :pr:`46` Models -- GeneralizedOptimizationInput/Result are marked as retired,
  with no change to accessibility.
* :pr:`46` Intf -- Defer a few QCElemental imports to reduce circular dependency
  between modules.
* :pr:`46` Maint -- Update a few `model.dict()` to `model.model_dump()`, which
  is safe b/c requiring QCElemental 0.50


.. _`sec:cl060`:

v0.6.0 / 2026-02-24
===================

:docs:`v0.6.0` for current. :docs:`v0.5.2` for QCSchema v1.

v0.6.0 introduces QCSchema v2 compatibility and requires Pydantic v2.

Breaking Changes
----------------
* :pr:`43` Deps -- require QCElemental `>=0.50.0rc2`. Package managers will not
  solve for this version unless prereleases are allowed. No longer compatible
  with pre-next QCElemental.
* :pr:`43` Deps -- require Pydantic v2.
* :pr:`43` Schema -- QCSchema v2 trial field renames updated:

  * `component_results` → `cluster_results`
  * `component_properties` → `cluster_properties`
  * corresponding protocol name updates
  * `ManyBodyResultProperties` → `ManyBodyProperties`

New Features
------------
* :pr:`43` Schema -- add full QCSchema v2 compatibility, including QCManyBody schema and `Computer` interface.
* :pr:`43` Deps -- allow Python 3.14+ insofar as supported by Pydantic.
* :pr:`43` Models -- QCSchema v1 models are always importable (including on Python 3.14+), though instantiation will throw errors on 3.14+.
* :pr:`43` Intf -- `Computer` reorganized into `v1/computer.py` and `v2/computer.py`.
  The v1 version is used when accessed through ``qcmanybody.compter`` (and <3.14)
* :pr:`43` Testing -- expand test matrix to run combinations of v1 and v2 input/output models.


.. _`sec:cl052`:

v0.5.2 / 2026-02-16
===================

:docs:`v0.5.2` (Sphinx)

Enhancements
------------
* :pr:`45` Maint -- Switch from mkdocs back to Sphinx for Pydantic formatting and cross-project compatibility.


v0.5.1 / 2025-06-14
===================

:docs:`v0.5.1` (Mkdocs)

Bug Fixes
---------

* :pr:`40` Core -- Fix bug where an input ``fix_symmetry='c1'`` molecule didn't apply no symmetry to its fragments.


v0.5.0 / 2025-06-13
===================

Breaking Changes
----------------

New Features
------------

* :pr:`38` Feature -- alpha ManyBody QCSchema v2 added accessible through ``from qcmanybody.models.v2 import ManyBodyInput`` etc. Changes are:

  * In v2, ``ManyBodyResult`` gained ``native_files`` and ``molecule`` fields. The latter is unchanged by QCManyBody from the input. Also, ``cluster_results`` became required so the protocol can process it (can always be empty dict).
  * In v2, ``ManyBodyInput`` gained ``provenance`` and ``id`` fields.
  * In v2, ``ManyBodySpecification`` gained a ``program`` field, empty by default since prog may be supplied by argument.
  * ``ManyBodyResult.component_results`` in v1 is now in v2 ``ManyBodyResult.cluster_results``.
  * ``ManyBodyProtocols.component_results`` in v1 is now in v2 ``ManyBodyProtocols.cluster_results`` with the same default.
  * In v2, ``ManyBodyInput.extras`` field was removed. Extras should be on ``ManyBodySpecification``.
  * In v2, ``ManyBodyProperties``, ``ManyBodyKeywords``, and ``ManyBodySpecification`` lost their ``schema_version`` field.
  * All v2 models got their ``schema_name`` standardized to ``qcschema_many_body_<type>``. ``ManyBodyProtocols`` got a ``schema_name`` for the first time.
  * ``ManyBodyResult.success`` now in v2 is fixed True.
  * ``ManyBodyResult.properties`` composed of ``ManyBodyResultProperties`` in v1 is now in v2 composed of ``ManyBodyProperties``.
  * ``ManyBodySpecification.protocols`` composed of ``AtomicResultProtocols`` in v1 is now in v2 composed of ``AtomicProtocols``.
  * ``ManyBodyResult.component_properties`` composed of ``AtomicResultProperties`` in v1 is now in v2 ``ManyBodyResult.cluster_properties`` composed of ``AtomicProperties``.

Enhancements
------------

* :pr:`38` Utils -- updated the precise math function for arrays according to the NumPy deprecation warning.
* :pr:`39` Docs -- Added high-level interface overview.

Bug Fixes
---------

* :pr:`38` Docs -- Fix typos in core docs page.

Misc.
-----

* :pr:`38` Maint -- Pydantic package version must be v2 or v1 >=1.10.17. This ensures the v2 API will be available for optional QCSchema v2, while QCManyBody remains on v1 API (importable from package v2).
* :pr:`38` Maint -- Updated license and package spec.


v0.4.0 / 2025-01-16
===================

Breaking Changes
----------------

* :pr:`36` Feature -- as the embedded point charges aren't fully validated and (in the QCEngine computer function of the high-level interface) only work with Psi4 anyways, they are now hidden. Set environment variable ``QCMANYBODY_EMBEDDING_CHARGES=1`` to access functionality.

New Features
------------

Enhancements
------------

* :pr:`36` Utils -- when adding up results from many molecular species, now the compensated sums ``math.fsum`` or ``numpy.sum`` are used.

Bug Fixes
---------

Misc.
-----

* Maint -- pinned to QCElemental <0.70 to use only QCSchema v1.


v0.3.0 / 2024-07-21
===================

Breaking Changes
----------------

* :pr:`28` Intf -- low-level "core" interface renamed from ``ManyBodyCalculator`` to ``ManyBodyCore``. The old name will continue to work for a few months. Also, its file changed from ``manybody.py`` to ``core.py`` but it was already a top-level import.
* :pr:`30` Intf -- low-level "core" interface now requires named arguments beyond the first recognizable ones (mol, bsse_type, levels).
* :pr:`32` Intf -- "high-level" interface now no longer stores QCVariables (or any other results dicts) in extras.
* :pr:`32` Utils -- ``qcmanybody.utils.collect_vars`` now returns with keys from ManyBodyResultProperties rather than QCVariables.
* :pr:`32` Utils -- arguments rearranged in ``qcmanybody.tests.utils.run_qcengine`` (use serial backend for core interface) to align with ``ManyBodyCore`` init arguments.

New Features
------------

* :pr:`32` Schema -- a new function ``ManyBodyResultProperties.to_qcvariables()`` returns a translation map to QCVariables keys.
* :pr:`32` Schema -- a new function ``qcmanybody.utils.translate_qcvariables(map)`` switches between QCVariable and QCSchema keys.
* :pr:`33` Schema -- ``ManyBodySpecification.extras`` added.
* :pr:`34` Schema -- Add schema_version to ``AtomicSpecification``, ``ManyBodySpecification``, ``ManyBodyKeywords``, ``ManyBodyInput``, and ``ManyBodyResultProperties``.

Enhancements
------------

* :pr:`28` Intf -- high-level interface is now importable from the top level module.
* :pr:`29` Maint -- QCEngine is needed only for the continuous running function of the high-level interface, so making it an optional dependency.
* :pr:`30` Intf -- low-level "core" interface now accepts a molecule in partial schema dictionary format rather than requiring a constructed ``qcelemental.Molecule`` object. If the molecule is a single large fragment, an error is thrown.
* :pr:`30` Docs -- add end-to-end demos in test_examples.
* :pr:`31` Schema -- add "none" as a bsse_type alias to "nocp".
* :pr:`34` Schema -- Allow environment variable QCMANYBODY_MAX_NBODY to influence the body-level to which ``ManyBodyResultProperties`` is defined added.
* :pr:`34` Schema -- added discriminator to input for ``GeneralizedOptimizationInput`` and ``GeneralizedOptimizationResult`` models to allow input from dicts (rather than models) in OptKing. Further specialized QCElemental.
* :pr:`34` Schema -- ``ManyBodyResultProperties`` is still only explicitly enumerated up to tetramers, but now it allows through higher-body fields when they match a pattern.
* :pr:`34` Maint -- start testing optimizations through QCEngine.
* :pr:`34` Util -- add ``labeler(..., opaque=False)`` option to produce eye-friendly ``(1)@(1, 2)`` style labels as well as the semi-opaque internal style. Also always convert single ints to tuples now. Function ``delabeler`` can decode the new style.
* :pr:`34` Intf -- sort "core" ``nbodies_per_mc_level`` dictionary so model chemistries are in a predictable 1b, 2b, ..., supersystem order. Check that high-level (different data structure) agrees.
* :pr:`34` Util -- add short ordinal model chemistry level (e.g., §A) to the ``format_calc_plan`` and ``print_nbody_energy`` summaries.
* :pr:`34` Util -- add function ``modelchem_labels`` to associate n-body level, model chemistry level, one-char ordinal modelchem label, and n-bodies-covered modelchem label.


v0.2.1 / 2024-05-14
===================

Enhancements
------------

* :pr:`27` Intf -- move high-level interface from ``qcmb.qcng_computer.ManyBodyComputerQCNG`` to ``qcmb.computer.ManyBodyComputer``. Suppressed remaining printing.


v0.2.0 / 2024-05-13
===================

New Features
------------

* :pr:`25` Schema -- added a new field ``ManyBodyResults.component_results`` to store subsystem ``AtomicResult`` s (or other Result if layered computation). By default this is not stored, but it can be with ``ManyBodyInput.protocols.component_results = "all"``.
* :pr:`25` Schema -- added ``GeneralizedOptimizationInput`` and ``GeneralizedOptimizationResult`` models as temporary extensions of ``OptimizationInput/Result`` when the optimizer can run ``ManyBodyInput`` s through QCEngine, not just ``AtomicInput`` s. Needs special QCElemental, QCEngine, and OptKing to work for now.

Enhancements
------------

* :pr:`22` Intf -- move high-level interface to main directory and remove unused functions. Most common route into interface is now: ``qcmb.ManyBodyComputerQCNG.from_manybodyinput``.
* :pr:`25` Schema -- ``AtomicSpecification.protocols`` set in ``ManyBodySpecification.specification`` will now be observed.
* :pr:`26` Schema -- add ``AtomicSpecification.extras``.

Bug Fixes
---------

* :pr:`25` Schema -- ``ManyBodyKeywords.embedding_charges`` now default to None rather than empty dict.

Misc.
-----

* :pr:`21` Docs -- installation and molecule.
* :pr:`24` Intf -- release "frozen" pydantic on high-level ManyBodyComputerQCNG, so core-interface ManyBodyCalculator can live on the class.
* :pr:`26` Cleanup -- remove most debug printing.


v0.1.0 / 2024-04-24
===================

New Features
------------

* Runs CP, NoCP, VMFC energies, gradients, and Hessians.
